--- a/aboutme.css
+++ b/aboutme.css
@@ -11,3 +11,19 @@ body {
 h1 {
   text-align:center ;
  }
+
+h2 {
+   text-align:right;
+  
+}
+h3 {
+  text-align:center ;
+ }
+
+h4 {
+  text-align:center ;
+ }
+
+h5 {
+  text-align:center ;
+ }
