--- a/aboutme.css
+++ b/aboutme.css
@@ -20,11 +20,12 @@ h2 {
 #Me {
   width:160px;
   height:190px;
-  align:paragrpah-left;
-} 
+  align:paragraph-left;
+}
 
 h3 {
   text-align:center;
+  vertical-align:middle;
  }
 
 #kittens {
@@ -54,3 +55,30 @@ h4 {
 h5 {
   text-align:center ;
  }
+
+#Udacity {
+  width:340px;
+  height:200px;
+}
+
+#Youtube {
+  width:340px;
+  height:280px;
+}
+
+#Codeacdamy {
+  width:240px;
+  height:240px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
