--- a/aboutme.css
+++ b/aboutme.css
@@ -17,9 +17,14 @@ h2 {
   
 }
 
-.Column-one {
-  border-color: red;
-}
+.city {
+    float: left;
+    margin: 5px;
+    padding: 15px;
+    max-width: 300px;
+    height: 300px;
+    border: 1px solid black;
+} 
 
 #Me {
   width:160px;
