--- a/aboutme.css
+++ b/aboutme.css
@@ -22,6 +22,9 @@ h2 {
     padding: 15px;
     max-width: 300px;
     height: 300px;
+    filter: alpha(opacity=50);
+    border: dashed ;
+    border-color: black ;
 } 
 
 #Me {
