--- a/aboutme.css
+++ b/aboutme.css
@@ -22,6 +22,8 @@ h2 {
     padding: 15px;
     max-width: 300px;
     height: 300px;
+    opacity: 0.5;
+    filter: alpha(opacity=50);
 } 
 
 #Me {
