--- a/aboutme.css
+++ b/aboutme.css
@@ -27,6 +27,7 @@ h2 {
 #Me {
   width:160px;
   height:190px;
+  padding: 10px;
 }
 
 h3 {
@@ -38,18 +39,21 @@ h3 {
   width:200px; 
   height: 120px;
   float: left;
+  padding: 10px;
 }
 
 #Bubble {
   width: 200px; 
   height: 120px ;
   float: left;
+  padding: 10px;
 }
 
 #Code {
   width:350px;
   height:320px;
   float: left;
+  padding: 10px;
 }
 
 h4 {
@@ -60,6 +64,7 @@ h4 {
   width:140px;
   height: 140px;
   float: left;
+  padding: 10px;
 }
 
 h5 {
@@ -70,16 +75,19 @@ h5 {
   width:340px;
   height:200px;
   float: left;
+  padding: 10px;
 }
 
 #Youtube {
   width:340px;
   height:280px;
   float: left;
+  padding: 10px;
 }
 
 #Codeacdamy  {
   width:240px;
   height:240px;
   float: left;
+  padding: 10px;
 }
