--- a/aboutme.css
+++ b/aboutme.css
@@ -12,6 +12,13 @@ h1 {
   text-align:center;
  }
 
+#Me {
+  width:160px;
+  height:190px;
+  padding: 20px;
+  float: left ;
+}
+
 h2 {
    text-align:right;
 }
@@ -24,12 +31,6 @@ h2 {
     height: 300px;
 } 
 
-#Me {
-  width:160px;
-  height:190px;
-  padding: 10px;
-}
-
 h3 {
   text-align:center;
   vertical-align:middle;
@@ -39,21 +40,21 @@ h3 {
   width:200px; 
   height: 120px;
   float: left;
-  padding: 10px;
+  padding: 20px;
 }
 
 #Bubble {
   width: 200px; 
   height: 120px ;
   float: left;
-  padding: 10px;
+  padding: 20px;
 }
 
 #Code {
   width:350px;
   height:320px;
   float: left;
-  padding: 10px;
+  padding: 20px;
 }
 
 h4 {
@@ -64,7 +65,7 @@ h4 {
   width:140px;
   height: 140px;
   float: left;
-  padding: 10px;
+  padding: 20px;
 }
 
 h5 {
@@ -75,20 +76,20 @@ h5 {
   width:340px;
   height:200px;
   float: left;
-  padding: 10px;
+  padding: 20px;
 }
 
 #Youtube {
   width:340px;
   height:280px;
   float: left;
-  padding: 10px;
+  padding: 20px;
 }
 
 #Codeacdamy  {
   width:240px;
   height:240px;
   float: left;
-  padding: 10px;
+  padding: 20px;
 }
 
