--- a/aboutme.css
+++ b/aboutme.css
@@ -44,3 +44,55 @@ h5 {
   text-align:center;
  }
 
+#Me {
+  width:160px;
+  height:190px;
+  
+
+padding: 20px;
+  float: left;
+}
+
+#kittens  {
+  width:200px; 
+  height: 
+
+120px;
+  float: left;
+  padding: 20px;
+}
+
+#Bubble {
+  width: 200px; 
+  height: 120px ;
+  float: left;
+  padding: 20px;
+}
+#Code {
+  width:350px;
+  height:320px;
+  float: left;
+  padding: 20px;
+}
+
+#Youtube {
+  width:340px;
+  height:280px;
+  float: left;
+  padding: 20px;
+} 
+
+#Udacity {
+  width:340px;
+  height:200px;
+  float: left;
+  padding: 20px;
+}
+
+#Codeacdamy  {
+  width:240px;
+  height:240px;
+  float: left;
+  padding: 20px;
+}
+
