--- a/aboutme.css
+++ b/aboutme.css
@@ -31,6 +31,9 @@ h2 {
     height: 1000px;
 } 
 
+.row1 {
+} 
+
 h3 {
   text-align:center;
   vertical-align:middle;
@@ -54,7 +57,7 @@ h3 {
   padding: 20px;
 }
 
-#row2 {
+.row2 {
   padding: 20px;
   
 }
