--- a/aboutme.css
+++ b/aboutme.css
@@ -16,6 +16,7 @@ h1 {
   width:160px;
   height:190px;
   padding:20px;
+  float: top;
 }
 
 h2 {
@@ -43,18 +44,21 @@ h3 {
   width:200px; 
   height:  120px;
   padding: 20px;
+    float: top;
 }
 
 #Bubble {
   width: 200px; 
   height: 120px;
   padding: 20px;
+    float: top;
 }
 
 #Code {
   width:350px;
   height:320px;
   padding: 20px;
+    float: top;
 }
 
 .row2 {
@@ -65,7 +69,7 @@ h4 {
   text-align:center;
  }
 
-#orange #Ads #Loud {
+#orange #Ads {
   width:140px;
   height: 140px;
   float: top; 
@@ -76,6 +80,7 @@ h4 {
   width:100px;
   height:100px;
   padding:10px;
+    float: top;
 }
 
 h5 {
@@ -86,16 +91,19 @@ h5 {
   width:340px;
   height:200px;
   padding: 20px;
+    float: top;
 }
 
 #Youtube {
   width:340px;
   height:280px;
   padding: 20px;
+    float: top;
 }
 
 #Codeacdamy  {
   width:240px;
   height:240px;
   padding: 20px;
+    float: top;
 }
