--- a/aboutme.css
+++ b/aboutme.css
@@ -9,7 +9,7 @@ body {
   }
 
 h1 {
-  text-align:center ;
+  text-align:center;
  }
 
 #Me {
@@ -36,11 +36,15 @@ h3 {
   vertical-align:middle;
  }
 
+.row1 {
+  float: left;
+}
+
 #kittens  {
   width:200px; 
   height:  120px;
   padding: 10px;
-    float: top;
+  float: top;
 }
 
 #Bubble {
