--- a/aboutme.css
+++ b/aboutme.css
@@ -28,8 +28,7 @@ h2 {
     float: left;
     margin: 5px;
     padding: 15px;
-    max-width: 325px;
-    height: 1300px;
+    width: 3/12; 
     border-color: black; 
     border: dotted;
 }  
