--- a/aboutme.css
+++ b/aboutme.css
@@ -28,7 +28,7 @@ h2 {
     float: left;
     margin: 5px;
     padding: 15px;
-    width: 3/12; 
+    vertical-width: 3/12; 
     border-color: black; 
     border: dotted;
 }  
