--- a/aboutme.css
+++ b/aboutme.css
@@ -28,9 +28,9 @@ h2 {
     float: left;
     margin: 5px;
     padding: 15px;
-    vertical-width: 3/12; 
     border-color: black; 
     border: dotted;
+    position: absolute; 
 }  
 
 h3 {
