--- a/aboutme.css
+++ b/aboutme.css
@@ -28,8 +28,8 @@ h2 {
     float: left;
     margin: 5px;
     padding: 15px;
-    max-width: 325px;
-    height: 1300px; 
+    width: absolute;
+    height: absolute; 
     border-color: black; 
     border: dotted;
 }  
