--- a/aboutme.css
+++ b/aboutme.css
@@ -55,6 +55,9 @@ h3 {
   height: 120px;
   padding: 20px;
   float: top;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 #Code {
@@ -62,6 +65,9 @@ h3 {
   height: 320px;
   padding: 20px;
   float: top;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 h4 {
@@ -78,6 +84,9 @@ h4 {
   height: 140px;
   float: top; 
   padding: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 #Loud {
@@ -85,6 +94,9 @@ h4 {
   height: 100px;
   padding: 10px;
   float: top;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 h5 {
@@ -97,6 +109,9 @@ h5 {
   height: 200px;
   padding: 20px;
   float: top;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 #Youtube {
@@ -104,6 +119,9 @@ h5 {
   height: 280px;
   padding: 20px;
   float: top;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 #Codeacdamy {
@@ -111,4 +129,7 @@ h5 {
   height: 240px;
   padding: 20px;
   float: top;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
