--- a/aboutme.css
+++ b/aboutme.css
@@ -79,7 +79,17 @@ h4 {
   padding: 20px;
 }
 
-#orange #Ads {
+#orange {
+  width: 140px;
+  height: 140px;
+  float: top; 
+  padding: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+#Ads {
   width: 140px;
   height: 140px;
   float: top; 
