--- a/aboutme.css
+++ b/aboutme.css
@@ -7,6 +7,12 @@ body {
   border-thickness: 9px;      
   background-color: #FFB6C1;  
   }     
+
+#Menu {
+  border-color: black ;
+  font-color: white ;
+  background-color: black ;
+}
     
 h1 { 
   text-align: center;    
