--- a/aboutme.css
+++ b/aboutme.css
@@ -11,6 +11,7 @@ body {
 #Menu {
   border-color: black ;
   font-color: white ;
+  text-decoration: none ; 
   background-color: black ;
   text-align: center ;
   height: 80px ; 
