--- a/Hobbies.css
+++ b/Hobbies.css
@@ -8,26 +8,6 @@ body {
   background-color: #FFB6C1;
   }
 
-.column1 {
-   float: left;
-    margin: 5px;
-    padding: 15px;
-    max-width: 300px;
-    height: 300px;
-}
-
-.column2 {
-   float: middle;
-    margin: 5px;
-    padding: 15px;
-    max-width: 300px;
-    height: 300px;
-}
-
-#column3 {
-   float: right;
-    margin: 5px;
-    padding: 15px;
-    max-width:  300px;
-    height: 300px;
+.construction {
+  align: bottom; 
 }
