--- a/aboutme.css
+++ b/aboutme.css
@@ -147,10 +147,11 @@ h5 {
    background-color: light-blue;
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 50px;
     border-radius: 12px;
+   height: 200px; 
 }
