--- a/aboutme.css
+++ b/aboutme.css
@@ -144,7 +144,7 @@ h5 {
 }
 
 #demo {
-   background-color: light-blue;
+   background-color: blue;
     border: none;
     color: white;
     padding: 32px;
@@ -153,5 +153,4 @@ h5 {
     display: inline-block;
     font-size: 50px;
     border-radius: 12px;
-   height: 200px; 
 }
