--- a/aboutme.css
+++ b/aboutme.css
@@ -153,4 +153,6 @@ h5 {
     display: inline-block;
     font-size: 50px;
     border-radius: 12px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
 }
