--- a/aboutme.css
+++ b/aboutme.css
@@ -40,7 +40,7 @@ h2 {
     height: absolute; 
     border-color: black; 
     border: dotted;
-    background-color: gray; 
+    background-color: light-grey; 
 }   
  
 h3 {    
