--- a/aboutme.css
+++ b/aboutme.css
@@ -170,3 +170,12 @@ h5 {
   transition: 0.5s;
 }
 
+#demo span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
