--- a/aboutme.css
+++ b/aboutme.css
@@ -158,6 +158,7 @@ h5 {
     transition-duration: 0.4s;
   transition: all 0.5s;
   cursor: pointer;
+  vertical-align: center ;
 }
 
 #demo:hover {
