--- a/aboutme.css
+++ b/aboutme.css
@@ -40,7 +40,7 @@ h2 {
     height: absolute; 
     border-color: black; 
     border: dotted;
-    background-color: #f2f2f2; 
+    background-color: #e5e5e5; 
 }   
  
 h3 {    
