--- a/aboutme.css
+++ b/aboutme.css
@@ -12,7 +12,7 @@ body {
   border-color: black ;  
   font-color: white ;   
   text-decoration: none ; 
-  background-color: #d8d8d8 ;
+  background-color: black ;
   text-align: center ;
   height: 80px ; 
 }
