--- a/aboutme.css
+++ b/aboutme.css
@@ -49,16 +49,7 @@ h3 {
   float: top; 
  }
 
-#kittens {
-  width: 300px; 
-  height: 200px;
-  float: top;
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-}
-
-#Bubble {
+#kittens #Bubble {
   width: 300px; 
   height: 200px;
   float: top;
