--- a/aboutme.css
+++ b/aboutme.css
@@ -49,7 +49,45 @@ h3 {
   float: top; 
  }
 
-#kittens #Bubble {
+#kittens {
+  width: 300px; 
+  height: 200px;
+  float: top;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+#kittens {
+  width: 400px;
+  position: relative;
+  overflow: hidden;
+}
+
+#kittens {
+  width: 100%;
+}
+
+kittens {
+  position: absolute;
+  bottom: -30px;
+  left: 0;
+  width: 100%;
+  opacity: 0;
+  box-sizing: border-box;
+  color: #fff;
+  padding: 10px 20px;
+}
+.column p {
+  font-size: 12px;
+  margin: 4px 0 14px;
+}
+#kittens:hover .column {
+  opacity: 1;
+  bottom: -5px;
+}
+
+#Bubble {
   width: 300px; 
   height: 200px;
   float: top;
