--- a/aboutme.css
+++ b/aboutme.css
@@ -64,7 +64,7 @@ h3 {
   overflow: hidden;
 }
 
-kittens {
+#kittens {
   position: absolute;
   bottom: -30px;
   opacity: 0;
@@ -72,7 +72,7 @@ kittens {
   color: #fff;
 }
 .column p {
-  font-size: 12px;
+  font-size: 50px;
   margin: 4px 0 14px;
 }
 #kittens:hover .column {
