--- a/aboutme.css
+++ b/aboutme.css
@@ -29,6 +29,11 @@ padding: 10px;
 background-color: #ffffff;
 } 
     
+#Click {
+  text-align: bottom ;
+  
+  
+}
 h1 { 
   text-align: center;    
   text-align: top;   
