--- a/aboutme.css
+++ b/aboutme.css
@@ -11,7 +11,7 @@ body {
 #Menu {   
   border-color: black ;  
   font-color: white ;   
-  text-decoration: none ; 
+  /*text-decoration: none ;*/ 
   background-color: black ;
   text-align: center ;
   height: 80px ; 
