--- a/aboutme.css
+++ b/aboutme.css
@@ -11,10 +11,13 @@ body {
 #Menu {   
   border-color: black ;  
   font-color: white ;   
-  /*text-decoration: none ;*/ 
   background-color: black ;
   text-align: center ;
   height: 80px ; 
+}
+
+#Menu a {
+  text-decoration: none; 
 }
 
 h1 { 
