--- a/aboutme.css
+++ b/aboutme.css
@@ -11,8 +11,11 @@ body {
 #Menu {   
   border-color: black ;    
   background-color: black ;
+  opacity: 8 ; 
   text-align: center ;
   height: 80px ; 
+  font-color: white; 
+  
 }
 
 #Menu a {
