--- a/aboutme.css
+++ b/aboutme.css
@@ -14,8 +14,6 @@ body {
   opacity: .8 ; 
   text-align: center ;
   height: 80px ; 
-  font-color: white; 
-  
 }
 
 #Menu a {
@@ -46,6 +44,7 @@ h2 {
     border-color: black; 
     border: dotted;
     background-color: #d8d8d8; 
+    opacity: .3 ;
 }   
  
 h3 {    
