--- a/Hobbies.css
+++ b/Hobbies.css
@@ -5,7 +5,7 @@ body {
   border: dotted; 
   border-color: black; 
   border-thickness: 9px;  
-  background-color: #FFB6C1;
+  background-image: url("http://s1.picswalls.com/wallpapers/2014/07/28/maldives-beach-desktop-wallpaper_120650391_113.jpg");
   } 
 
 #Menu {
