--- a/home.css
+++ b/home.css
@@ -22,10 +22,16 @@ body {
   left: 100%;
   right: 0;
   background-color: #008CBA;
+  opacity: .7 ; 
   overflow: hidden;
   width: 0;
   height: 100%;
   transition: .5s ease;
+}
+
+.box {
+  background-color: #B0C4DE ; 
+  opacity: .8 ; 
 }
 
 .container:hover .overlay {
