--- a/home.css
+++ b/home.css
@@ -85,3 +85,49 @@ h1 {
 .topnav .icon {
     display: none;
 }
+
+.container1 {
+  position: relative; 
+  width: 50%; 
+}
+
+.image {
+  display: block;
+  width: 100%;
+  height: auto; 
+}
+
+.overlay1 {
+  position: absolute;
+  bottom: 0; 
+  left: 100%;
+  right: 0;
+  background-color: #008CBA;
+  opacity: .7 ; 
+  overflow: hidden;
+  width: 0;
+  height: 100%;
+  transition: .5s ease;
+}
+
+.box1 {
+  background-color: #B0C4DE ; 
+  opacity: .8 ; 
+}
+
+.container1:hover .overlay {
+  width: 100%;
+  left: 0;
+}
+
+.text1 {
+  white-space: nowrap; 
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  overflow: hidden;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
