--- a/home.css
+++ b/home.css
@@ -5,7 +5,7 @@ body {
   padding: 90px;
 }    
    
-h1 {  
+h1 h2 {  
   border-bottom: solid; 
   border-bottom-color: DodgerBlue ; 
   background-color: LightGray ;
