--- a/home.css
+++ b/home.css
@@ -14,7 +14,7 @@ h1 {
 
 h2 {
   border-bottom: solid; 
-  border-bottom-color: DodgerBlue ; 
+  border-bottom-color: Blue ; 
   background-color: LightGray ;
   opacity: .7 ;  
 }
