--- a/home.css
+++ b/home.css
@@ -1,6 +1,6 @@
 body {
-  background-image: url("anime-scenery-wallpaper-background-Is-Cool-Wallpapers.jpg"); <!---why isnt it working?--->
-  font-size: 260%; 
+  background-image: url("anime-scenery-wallpaper-background-Is-Cool-Wallpapers.jpg"); 
+  font-size: 200%; 
   font-family: courier;    
   padding: 90px;
 }     
