--- a/home.css
+++ b/home.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("anime-scenery-wallpaper-background-Is-Cool-Wallpapers.jpg"); 
+  background-image: url("https://franklinaid.files.wordpress.com/2013/02/solar-panels.jpg"); 
   font-size: 200%; 
   font-family: courier;    
   padding: 90px;
