--- a/home.css
+++ b/home.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("http://blog.arcadiapower.com/wp-content/uploads/2016/01/solar.jpg"); 
+  background-image: url("http://www.sarigelectrical.com/wp-content/uploads/2014/12/solarpanels.jpg"); 
   font-size: 200%; 
   font-family: courier;    
   padding: 90px;
