--- a/home.css
+++ b/home.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("http://www.sarigelectrical.com/wp-content/uploads/2014/12/solarpanels.jpg"); 
+  background-image: url("http://bayobserver.ca/wp-content/uploads/2012/06/Solar-Panel4.jpg"); 
   font-size: 200%; 
   font-family: courier;    
   padding: 90px;
