--- a/home.css
+++ b/home.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("http://bayobserver.ca/wp-content/uploads/2012/06/Solar-Panel4.jpg"); 
+  background-image: url("http://homesfeed.com/wp-content/uploads/2015/04/solar-panels-installation.jpg"); 
   background-repeat: no-repeat;
   font-size: 200%; 
   font-family: courier;    
